2006-10-24  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c:
	- When removing a plugin re-arrange the panel from previous 
	plugin. Fixes: NB#43110

2006-10-24  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-panel.c: Free the
	gtk_container_get_children's list.
	* hildon-status-bar/hildon-status-bar-main.c:
	- Free the library & category if we can't allocate the plugin.
	- (arrange_items) Code cleanup

2006-10-24  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: Reverted
 	behavior on event DBus signal when destroying plugin itself.

2006-10-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Removed shutdown_ind DBus
	  signal handler and widget signal
	* hildon-navigator/{hn-wm.c,hn-wm-memory.[ch]}: Removed
	  hn_wm_shutdown callback
	Fixes: NB#43779

2006-10-23  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.98

2006-10-23  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Remove the cache file
	  before trying to build a new one, so we rebuild the cache
	  when interupted

2006-10-23  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-menu-item.c: Make a copy of
	  the pixbuf to avoid modifying the cached icon

2006-12-23  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-window.c:
	* hildon-navigator/hildon-navigator-panel.[ch]:
	- Create the tasknavigator and defer the plugin loading

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.97

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator re-loads (and re-composites?) all
    of its visible app switcher icons when new application is started
	* hn-app-item.c: Added cache for the icons pixbuf
	* hn-app-menu-item-c: Use this cache
	Fixes: NB#42971

2006-10-19  Johan Bilien <johan.bilien@nokia.com>
