@@ -1,3 +1,8 @@
+2006-10-25  Johan Bilien <johan.bilien@nokia.com>
+
+	* hildon-navigator/hn-app-switcher.c: Also update the menu
+	  after a change in the stack
+
 2006-10-24  Moises Martinez <moises.martinzes@nokia.com>
 
 	* hildon-status-bar/hildon-status-bar-main.c:
